@@ -424,8 +424,8 @@ void ChannelUserKicked(struct userNode* kicker, struct userNode* victim, struct 
 int ChannelBanExists(struct chanNode *channel, const char *ban);
 int ChannelExemptExists(struct chanNode *channel, const char *exempt);
 
-typedef int (*topic_func_t)(struct userNode *who, struct chanNode *chan, const char *old_topic);
-void reg_topic_func(topic_func_t handler);
+typedef int (*topic_func_t)(struct userNode *who, struct chanNode *chan, const char *old_topic, void *extra);
+void reg_topic_func(topic_func_t handler, void *extra);
 void SetChannelTopic(struct chanNode *channel, struct userNode *service, struct userNode *user, const char *topic, int announce);
 struct userNode *IsInChannel(struct chanNode *channel, struct userNode *user);
 
